--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 <!-- NAV -->
 <nav>
-  <div class="logo">Rakesh</div>
+  <div class="logo">Portfolio</div>
   <ul>
     <li><a href="#home">Home</a></li>
     <li><a href="#about">About</a></li>
